// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders SwitchButton primary checked 1`] = `
<div
  className="SwitchButton"
>
  <label
    style={
      Object {
        "color": "blue",
      }
    }
  >
    ENABLED
  </label>
  <div
    className=""
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className=""
      id="background"
      style={
        Object {
          "backgroundColor": "blue",
        }
      }
    />
    <div
      className=""
      id="cursor"
      style={
        Object {
          "transform": "translate3d(26px, 0, 0)",
        }
      }
    />
  </div>
</div>
`;

exports[`renders SwitchButton primary unchecked 1`] = `
<div
  className="SwitchButton"
>
  <label
    style={
      Object {
        "color": null,
      }
    }
  >
    DISABLED
  </label>
  <div
    className=""
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className=""
      id="background"
      style={Object {}}
    />
    <div
      className=""
      id="cursor"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`renders SwitchButton secondary checked 1`] = `
<div
  className="SwitchButton"
>
  <div
    className="secondary"
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className="secondary"
      id="background"
      style={
        Object {
          "backgroundColor": "blue",
        }
      }
    />
    <div
      className="secondary"
      id="cursor"
      style={
        Object {
          "transform": "translate3d(32px, 0, 0)",
        }
      }
    />
  </div>
</div>
`;

exports[`renders SwitchButton secondary unchecked 1`] = `
<div
  className="SwitchButton"
>
  <div
    className="secondary"
    id="switch-container"
    onClick={[Function]}
  >
    <div
      className="secondary"
      id="background"
      style={Object {}}
    />
    <div
      className="secondary"
      id="cursor"
      style={Object {}}
    />
  </div>
</div>
`;
